# sample-code

./: .env.sample  .gitignore  README.md  pyproject.toml
live/: CLIENT_DOCUMENTATION.md  CLIENT_SUMMARY.md  QUICK_START.md  README.md
live/js/: moveris_client.html
live/js/login_with_moveris/: .env.examples  README.md  index.html  tailwind.config.ts  vite.config.ts
live/js/login_with_moveris/src/: App.tsx  index.css
live/js/login_with_moveris/src/components/: WebcamCapture.tsx
live/js/login_with_moveris/src/pages/: Error.tsx  Landing.tsx  Onboarding.tsx  Payment.tsx  Register.tsx
live/js/sample_1/: moveris_client.html
live/js/sample_2/: camera-integration.js  index.html
live/node/: moveris_client.js  package-lock.json  package.json
live/python/: logging_config.py  moveris_client.py  requirements.txt
moveris-auth-system/: .env.example  .gitignore  DEPLOYMENT.md  ENVIRONMENT_SETUP.md  QUICKSTART.md  README.md  package-lock.json  package.json
moveris-auth-system/src/: App.jsx
moveris-live-analysis/: .env.example  .gitignore  ENVIRONMENT_SETUP.md  README.md  index.html  package.json  setup.bat  setup.sh  vite.config.json
moveris-live-analysis/src/: App.jsx
moveris-live-stream/: index.html
