[project]
name = "moveris-python-samples"
version = "0.1.0"
description = "Sample code patterns for working with Moveris Fraud Detection in Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "websockets (>=15.0.1,<16.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
